[CODE] Added FE + New configs
