# backend/lib/swagger/swagger.json
@@ -79,22 +79,12 @@
 						"$ref": "#/components/schemas/USER_TYPE"
 					},
 					"createdAt": {
-						"anyOf": [
-							{
-								"type": "string",
-								"format": "date-time"
-							},
-							{}
-						]
+						"type": "string",
+						"format": "date-time"
 					},
 					"updatedAt": {
-						"anyOf": [
-							{
-								"type": "string",
-								"format": "date-time"
-							},
-							{}
-						]
+						"type": "string",
+						"format": "date-time"
 					}
 				},
 				"required": [
@@ -183,32 +173,38 @@
 			"UserCreateReq": {
 				"$ref": "#/components/schemas/Pick_IUser.firstname-or-lastname-or-username-or-password-or-email-or-user_type_"
 			},
-			"Pick_IUser.firstname-or-lastname-or-username-or-email_": {
-				"properties": {
-					"firstname": {
-						"type": "string"
-					},
-					"lastname": {
-						"type": "string"
-					},
-					"username": {
-						"type": "string"
-					},
-					"email": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"firstname",
-					"lastname",
-					"username",
-					"email"
-				],
+			"Pick_UserUpdateReqPick.Exclude_keyofUserUpdateReqPick.firstname-or-lastname-or-username-or-email__": {
+				"properties": {},
 				"type": "object",
 				"description": "From T, pick a set of properties whose keys are in the union K"
 			},
+			"Omit_UserUpdateReqPick.firstname-or-lastname-or-username-or-email_": {
+				"$ref": "#/components/schemas/Pick_UserUpdateReqPick.Exclude_keyofUserUpdateReqPick.firstname-or-lastname-or-username-or-email__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
 			"UserUpdateReq": {
-				"$ref": "#/components/schemas/Pick_IUser.firstname-or-lastname-or-username-or-email_"
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/Omit_UserUpdateReqPick.firstname-or-lastname-or-username-or-email_"
+					},
+					{
+						"properties": {
+							"email": {
+								"type": "string"
+							},
+							"username": {
+								"type": "string"
+							},
+							"lastname": {
+								"type": "string"
+							},
+							"firstname": {
+								"type": "string"
+							}
+						},
+						"type": "object"
+					}
+				]
 			}
 		},
 		"securitySchemes": {
@@ -262,6 +258,95 @@
 						}
 					}
 				}
+			}
+		},
+		"/user/search": {
+			"get": {
+				"operationId": "SearchUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/UserResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"user"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "username",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "email",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "firstname",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "lastname",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "pageNumber",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "pageSize",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "filter",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "sortOrder",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		},
 		"/user/create": {
@@ -423,6 +508,134 @@
 						}
 					}
 				}
+			}
+		},
+		"/user/delete/{userId}": {
+			"delete": {
+				"operationId": "DeleteUser",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/UserResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"user"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/user/{user_type}": {
+			"get": {
+				"operationId": "GetUserByUserType",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/UserResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"user"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "user_type",
+						"required": true,
+						"schema": {
+							"$ref": "#/components/schemas/USER_TYPE"
+						}
+					},
+					{
+						"in": "query",
+						"name": "username",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "email",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "firstName",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "lastName",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "pageNumber",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "pageSize",
+						"required": false,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "filter",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"in": "query",
+						"name": "sortOrder",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
 			}
 		}
 	},
